# seraph

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.lab.yaml  config.yaml  docker-compose.yml  lab.sh  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
app/: main.py
app/core/: auth.py  config.py  (+1 more)
backend/: .dockerignore  Dockerfile  requirements-test.txt  requirements.txt  seed.py  seed_demo_logs.py
chatbot/: .env.example  index.html  requirements.txt  run.sh  server.py
chatbots/: README.md  chat.html
docs/: api.md  deployment.md  gateway-integrations.md  integration-guide.html  integration-guide.md  scanners.md
frontend/: Dockerfile  jest.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
gateway-examples/: aws-lambda.py  envoy.yaml  nginx.conf  traefik.yml
kong/: kong.yml  seraph_post.lua  seraph_pre.lua  skf_guard_post.lua  skf_guard_pre.lua
tests/: conftest.py  test_audit_logger.py  test_auth.py  test_config.py  test_config.yaml  test_coverage_gaps.py  test_custom_scanner.py  test_guard_graph.py  test_guard_nodes.py  test_guardrail_catalog.py  test_integrations.py  test_langgraph_judge.py  test_main.py  test_nemo_tier.py  test_proxy.py  test_risk_detectors.py  test_risk_engine.py  test_risk_policy.py  test_risk_scoring.py  test_risk_state.py  test_scan.py  test_scanner_engine_extended.py  test_scanner_engine_tiers.py  test_scanner_helpers.py  test_stream_scanner.py  test_text_canonicalizer.py  test_text_extractor.py
tools/: audit-viewer.py
(+195 files in other folders)
