[tool.poetry]
name = "seraph"
version = "2.0.0"
description = "YAML-configured LLM guardrail proxy"
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.135.2"
uvicorn = {version = "0.30.1", extras = ["standard"]}
pydantic = "2.12.5"
pyyaml = "6.0.3"
httpx = "0.27.0"
aiosqlite = "0.20.0"
llm-guard = "0.3.16"
onnxruntime = "1.18.1"
optimum = "1.27.0"
sentence-transformers = "2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "0.26.0"
pytest-cov = "5.0.0"
numpy = "1.26.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"
